--- a/updated/index.html
+++ b/updated/index.html
@@ -17,9 +17,9 @@
         <p>Score: <span class="player">0</span> - <span class="computer">0</span></p>
 
     </div>
-    <div id="result">
-        <h2></h2>
-    </div>
+
+    <h2 id="result"></h2>
+
     <script src="app.js"></script>
 </body>
 
