--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="app.js"></script>
+
     <title>Document</title>
 </head>
 
 <body>
+    <div>
+        <button id="rock">Rock</button><button id="paper">Paper</button><button id="scissors">Scissors</button>
+    </div>
+    <div id="score">
+        <p>Score: <span class="player">0</span> - <span class="computer">0</span></p>
 
+    </div>
+
+    <h2 id="result"></h2>
+
+    <script src="app.js"></script>
 </body>
 
 </html>
